<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tc_condition_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/condition_wrap"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#e8e8e8"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tc_select1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/arrow_down"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:text="@string/select_alltype"
                android:textColor="@color/B_black_50"
                android:textSize="14dp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:background="@drawable/leaf_line_vertical"
            android:contentDescription="@string/core_hr" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tc_select2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/arrow_down"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:text="@string/select_allcity"
                android:textColor="@color/B_black_50"
                android:textSize="14dp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:background="@drawable/leaf_line_vertical"
            android:contentDescription="@string/core_hr" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tc_select3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/arrow_down"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:text="@string/select_sortnear"
                android:textColor="@color/B_black_50"
                android:textSize="14dp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/tc_select_category_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/condition_wrap"
        android:background="@color/B_black_30"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <!-- 主菜单 -->

            <ListView
                android:id="@+id/tc_select_listview"
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:layout_weight="1"
                android:cacheColorHint="#00000000"
                android:choiceMode="singleChoice"
                android:divider="#00000000"
                android:dividerHeight="0dp"
                android:listSelector="@android:color/transparent"
                android:scrollbars="none"
                android:scrollingCache="false"
                android:visibility="gone" >
            </ListView>

            <!-- 二级菜单 -->

            <ListView
                android:id="@+id/tc_select_subListView"
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:layout_weight="1"
                android:background="#efefef"
                android:cacheColorHint="#00000000"
                android:divider="#00000000"
                android:dividerHeight="0dp"
                android:listSelector="@android:color/transparent"
                android:scrollingCache="false" >
            </ListView>
        </LinearLayout>
        
        <!-- 单级菜单:没有二级菜单的下拉 -->
        <ListView
            android:id="@+id/tc_select_single_listview"
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:cacheColorHint="#00000000"
            android:choiceMode="singleChoice"
            android:divider="#00000000"
            android:dividerHeight="0dp"
            android:listSelector="@android:color/transparent"
            android:scrollbars="none"
            android:scrollingCache="false" >
        </ListView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/core_img" />
    </RelativeLayout>

</RelativeLayout>